<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_best_popular_films_and_serials">Best Popular Films and Serials</string>
    <string name="lbl_SeeMore"> <u> See More </u> </string>
    <string name="lbl_more_show_cases"> <u> MORE SHOW CASES </u> </string>
    <string name="lbl_best_actors">best actors</string>
    <string name="lbl_more_actors"> <u>more actors</u> </string>
    <string name="lbl_storyline">Storyline</string>
    <string name="lbl_rate_movie">RATE MOVIE</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"> <u>MORE CREATORS</u> </string>
    <string name="lbl_original_title">Original Title</string>
</resources>