<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity"
     >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/lbl_discover"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner" />

                <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                    android:id="@+id/dotsIndicitorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:dampingRatio="0.5"
                    app:dotsStrokeColor="@android:color/darker_gray"
                    app:dotsColor="@color/colorAccent"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:dotsCornerRadius="4dp"
                    android:elevation="@dimen/margin_medium"
                    app:dotsSize="8dp"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsStrokeWidth="4dp"
                    app:stiffness="300"
                    />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmsAndSerialsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flBanner"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/lbl_best_popular_films_and_serials"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold" />

            <include
                android:id="@+id/vpBestPopularMovieList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBestPopularFilmsAndSerialsLabel"
                android:layout_marginTop="@dimen/margin_medium"
                layout="@layout/view_pod_movie_list"/>

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTimes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show_time"
                android:layout_below="@id/vpBestPopularMovieList"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Check Movie\nShowtimes"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:text="@string/lbl_SeeMore"
                    android:textAllCaps="true"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimeLocation"
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"/>


            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlCheckMovieShowTimes"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:background="@color/colorPrimary"
                app:tabTextColor="@color/colorSecondaryText"
                app:tabSelectedTextColor="@color/white"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"/>

            <FrameLayout
                android:id="@+id/flMovieList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_below="@id/tabLayoutGenre"
                android:paddingTop="@dimen/margin_medium_3"
                android:paddingBottom="@dimen/margin_large">

                <include
                    android:id="@+id/vpMoviesByGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/view_pod_movie_list"/>


            </FrameLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flMovieList"
                android:text="SHOWCASE"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_medium_2"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_more_show_cases"
                android:textColor="@color/white"
                android:layout_alignBaseline="@id/tvShowCaseLabel"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_medium_2"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowcases"
                android:layout_below="@id/tvShowCaseLabel"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card_medium_2"/>

            <include
                android:id="@+id/vpBestActor"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                layout="@layout/view_pod_actor_list"
                android:layout_below="@id/rvShowcases"/>



        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>