<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieDetailsActivity">
    
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimaryDark"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@android:color/transparent"
            android:layout_height="@dimen/height_collapsing_toolbar_movie_detail"
            app:title="Fantastic Beasts And Where To Find Them">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                android:elevation="@dimen/margin_medium_2"
                android:paddingStart="@dimen/margin_medium_2"
                android:paddingVertical="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_collapseMode="pin"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMovieDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/placeholder_wolverine_image"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:background="@drawable/gradient_actor"/>

            <RelativeLayout
                android:layout_width="match_parent"
                app:layout_collapseMode="parallax"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:text="Fantastic Beasts And Where To Find Them"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:layout_marginEnd="@dimen/margin_medium_2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReleaseYear"
                    android:layout_width="@dimen/width_release_year"
                    android:background="@drawable/background_release_year"
                    android:layout_height="@dimen/margin_xlarge"
                    android:text="2016"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_alignStart="@id/tvMovieName"
                    android:layout_above="@id/tvMovieName"
                    android:layout_marginBottom="@dimen/margin_medium_2"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_above="@id/tvMovieName"
                    android:textSize="@dimen/text_big"
                    android:layout_marginEnd="@dimen/margin_xlarge"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:text="9, 75"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <RatingBar
                    android:id="@+id/rbMovieDetailRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:numStars="5"
                    android:rating="5"
                    android:layout_toStartOf="@id/tvRating"
                    android:layout_alignTop="@id/tvRating"
                    android:layout_marginTop="@dimen/margin_card_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNumberOfVotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="388876 VOTES"
                    android:textSize="@dimen/text_small"
                    android:layout_above="@id/tvMovieName"
                    android:textColor="@color/colorSecondaryText"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/tvRating"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium_3"/>

            </RelativeLayout>
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
        
        
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvMovieDetail"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:elevation="@dimen/margin_small"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_access_white_time_24dp"
                app:tint="@color/colorAccent"
                android:layout_marginStart="@dimen/margin_medium_2"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTime"
                android:layout_toEndOf="@id/ivTime"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="2hr 30min"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFirstGenre"
                android:layout_toEndOf="@id/tvTime"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/background_genre_chips"
                android:text="Action"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_medium"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSecondGenre"
                android:layout_toEndOf="@id/tvFirstGenre"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/background_genre_chips"
                android:text="Family"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_medium"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvThirdGenre"
                android:layout_toEndOf="@id/tvSecondGenre"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/background_genre_chips"
                android:text="Adventure"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_medium"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFavourite"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_baseline_favorite_white_border_24dp"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleStoryLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_storyline"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_below="@id/ivTime"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOverview"
                android:layout_below="@id/tvTitleStoryLine"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_card_medium_2"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:text="Lured to a Japan he hasn't seen since World War II, century-old mutant Wolverine (Hugh Jackman) finds himself in a shadowy realm of yakuza and samurai. Wolverine is pushed to his physical and emotional brink when he is forced to go on the run with a powerful industrialist's daughter (Tao Okamoto) and is confronted -- for the first time -- with the prospect of death. As he struggles to rediscover the hero within himself, he must grapple with powerful foes and the ghosts of his own haunted past."
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/btnPlayTrailer"
                android:layout_below="@id/tvOverview"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:background="@drawable/background_play_trailer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_xxlarge"
                android:paddingHorizontal="@dimen/margin_medium_2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPlay"
                    app:srcCompat="@drawable/ic_baseline_play_circle_filled_white_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:tint="@color/colorTransparentOverlay" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPlayTrailerLabel"
                    android:text="Play Trailer"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/ivPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnRateMovie"
                android:layout_toEndOf="@id/btnPlayTrailer"
                android:layout_alignTop="@id/btnPlayTrailer"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:paddingHorizontal="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:background="@drawable/background_rate_movie"
                android:layout_height="@dimen/margin_xxlarge">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivStar"
                    app:tint="@color/colorAccent"
                    android:layout_width="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_star_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRateMovie"
                    android:layout_toEndOf="@id/ivStar"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/lbl_rate_movie"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <include
                android:id="@+id/vpActors"
                layout="@layout/view_pod_actor_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnRateMovie"
                android:layout_marginTop="@dimen/margin_large"/>


            <LinearLayout
                android:id="@+id/llOriginalTitle"
                android:layout_below="@id/vpActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/text_regular_2x"
                    android:text="@string/lbl_original_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOriginalTitle"
                    android:textColor="@color/white"
                    android:text="Fantastic Beasts To Find Them"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lltype"
                android:layout_below="@id/llOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/text_regular_2x"
                    android:text="Type:"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvType"
                    android:textColor="@color/white"
                    android:text="Fantasy, Family, Adventure"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>



            <include
                android:id="@+id/vpCreators"
                layout="@layout/view_pod_actor_list"
                android:layout_below="@id/lltype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>